--- a/episodes.cabal
+++ b/episodes.cabal
@@ -27,6 +27,7 @@ library
                      Handler.Shows
                      Handler.Users
                      TVRage
+                     Episodes.Time
 
 
     if flag(dev) || flag(library-only)
@@ -59,6 +60,7 @@ library
                  , yesod-fay                     >= 0.5.0.1
                  , fay                           >= 0.16
                  , bytestring                    >= 0.9
+                 , time
                  , text                          >= 0.11
                  , persistent                    >= 1.3
                  , persistent-sqlite             >= 1.3
