Basic stats, some queries and updates externalized, view and subscription counts updates

--- a/episodes.cabal
+++ b/episodes.cabal
@@ -27,9 +27,10 @@ library
                      Handler.Users
                      Handler.Stats
                      TVRage
+                     Episodes.DB
+                     Episodes.Format
                      Episodes.Time
                      Episodes.Trace
-                     Episodes.Format
 
 
     if flag(dev) || flag(library-only)
