--- a/episodes.cabal
+++ b/episodes.cabal
@@ -1,6 +1,6 @@
 name:              episodes
 version:           0.1.0
-cabal-version:     >= 1.19
+cabal-version:     >= 1.18
 build-type:        Simple
 
 Flag dev
@@ -13,7 +13,7 @@ Flag library-only
 
 library
     default-language: Haskell2010
-    hs-source-dirs: ., fay-shared
+    hs-source-dirs: .
     exposed-modules: Application
                      Foundation
                      Import
@@ -21,8 +21,7 @@ library
                      Settings
                      Settings.StaticFiles
                      Settings.Development
-                     SharedTypes
-                     Handler.Fay
+                     Handler.API
                      Handler.Calendar
                      Handler.Shows
                      Handler.Users
@@ -33,6 +32,8 @@ library
                      Episodes.Format
                      Episodes.Time
                      Episodes.Trace
+                     Episodes.YesodPureScript
+                     Episodes.YesodPureScriptRoutes
 
 
     if flag(dev) || flag(library-only)
@@ -45,7 +46,6 @@ library
                         QuasiQuotes
                         OverloadedStrings
                         NoImplicitPrelude
-                        CPP
                         MultiParamTypeClasses
                         TypeFamilies
                         GADTs
@@ -56,22 +56,29 @@ library
                         RankNTypes
                         DeriveDataTypeable
 
-    build-depends: base                          >= 4          && < 5
+    build-depends: attoparsec
+                 , base                          >= 4          && < 5
                  , base64-bytestring             >= 1.0
                  , bytestring                    >= 0.9
-                 , fay                           >= 0.16
+                 , filepath
                  , hjsmin                        >= 0.1
+                 , http-conduit                  >= 2.1
+                 , http-types
                  , monad-control                 >= 0.3
-                 , resourcet
-                 , time                          >= 1.4
-                 , text                          >= 0.11
+                 , parsec
                  , pbkdf                         >= 1.1
                  , persistent
                  , persistent-postgresql         >= 1.3
                  , persistent-template           >= 1.3
-                 , template-haskell
+                 , purescript                    >= 0.5.4.1
+                 , resourcet
+                 , scientific
                  , shakespeare                   >= 2.0
+                 , template-haskell
+                 , time                          >= 1.4
+                 , text                          >= 0.11
                  , transformers
+                 , utf8-string
                  , wai-extra                     >= 2.1
                  , yaml                          >= 0.8
                  , yesod                         >= 1.2.6
@@ -79,8 +86,6 @@ library
                  , yesod-auth                    >= 1.3
                  , yesod-static                  >= 1.2
                  , yesod-form                    >= 1.3
-                 , yesod-fay                     >= 0.5.0.1
-                 , http-conduit                  >= 2.1
                  , directory                     >= 1.1
                  , warp                          >= 2.1
                  , data-default
@@ -131,7 +136,7 @@ executable         tvrage
                         xml-conduit >= 1.2,
                         time,
                         old-locale
-    ghc-options:        -threaded -O2
+    ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N
 
 test-suite test
     type:              exitcode-stdio-1.0
