--- a/episodes.cabal
+++ b/episodes.cabal
@@ -56,55 +56,56 @@ library
                         RankNTypes
                         DeriveDataTypeable
 
-    build-depends: attoparsec
+    build-depends: aeson                         >= 0.6
+             , attoparsec
                  , base                          >= 4          && < 5
                  , base64-bytestring             >= 1.0
                  , bytestring                    >= 0.9
+                 , conduit                       >= 1.0
+                 , containers
+                 , directory                     >= 1.1
+                 , fast-logger                   >= 2.2
                  , filepath
                  , hjsmin                        >= 0.1
+                 , HTTP                          >= 4000.2.18
                  , http-conduit                  >= 2.1
                  , http-types
                  , monad-control                 >= 0.3
+                 , monad-logger                  >= 0.3
+                 , network
+                 , network-uri
+                 , old-locale
+                 , options
                  , parsec
                  , pbkdf                         >= 1.1
                  , persistent
                  , persistent-postgresql         >= 1.3
                  , persistent-template           >= 1.3
-                 , purescript                    >= 0.5.4.1
+                 , process                       >= 1.1.0.2
+                 , purescript                    >= 0.5.4.2
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0
                  , template-haskell
                  , time                          >= 1.4
                  , text                          >= 0.11
+                 , text-format
                  , transformers
+                 , tz
+                 , unordered-containers          >= 0.2
                  , utf8-string
                  , wai-extra                     >= 2.1
+                 , wai-logger                    >= 2.2
+                 , warp                          >= 2.1
+                 , xml-conduit
                  , yaml                          >= 0.8
                  , yesod                         >= 1.2.6
+                 , yesod-auth-hashdb
                  , yesod-core                    >= 1.2.17
                  , yesod-auth                    >= 1.3
                  , yesod-static                  >= 1.2
                  , yesod-form                    >= 1.3
-                 , directory                     >= 1.1
-                 , warp                          >= 2.1
                  , data-default
-                 , aeson                         >= 0.6
-                 , conduit                       >= 1.0
-                 , monad-logger                  >= 0.3
-                 , fast-logger                   >= 2.2
-                 , wai-logger                    >= 2.2
-                 , process                       >= 1.1.0.2
-                 , containers
-                 , network
-                 , options
-                 , text-format
-                 , unordered-containers          >= 0.2
-                 , xml-conduit
-                 , HTTP
-                 , tz
-                 , old-locale
-                 , yesod-auth-hashdb
 
 
 executable         episodes
@@ -130,7 +131,8 @@ executable         tvrage
     build-depends:      base,
                         bytestring >= 0.10,
                         HTTP,
-                        network >= 2.5,
+                        network >= 2.6,
+                        network-uri >= 2.6,
                         options,
                         text,
                         xml-conduit >= 1.2,
