--- a/episodes.cabal
+++ b/episodes.cabal
@@ -22,6 +22,7 @@ library
                      Settings.StaticFiles
                      Settings.Development
                      Handler.API
+                     Handler.Export
                      Handler.Calendar
                      Handler.Shows
                      Handler.Users
@@ -29,6 +30,7 @@ library
                      TVRage
                      Episodes.Auth
                      Episodes.DB
+                     Episodes.Common
                      Episodes.Format
                      Episodes.Time
                      Episodes.Trace
@@ -70,10 +72,10 @@ library
                  , HTTP                          >= 4000.2.18
                  , http-conduit                  >= 2.1
                  , http-types
+                 , iCalendar                     >= 0.4
                  , monad-control                 >= 0.3
                  , monad-logger                  >= 0.3
                  , network
-                 , network-uri
                  , old-locale
                  , options
                  , parsec
@@ -82,7 +84,7 @@ library
                  , persistent-postgresql         >= 1.3
                  , persistent-template           >= 1.3
                  , process                       >= 1.1.0.2
-                 , purescript                    >= 0.5.4.2
+                 , purescript                    >= 0.5.4.1
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0
@@ -94,13 +96,13 @@ library
                  , tz
                  , unordered-containers          >= 0.2
                  , utf8-string
+                 , uuid
                  , wai-extra                     >= 2.1
                  , wai-logger                    >= 2.2
                  , warp                          >= 2.1
                  , xml-conduit
                  , yaml                          >= 0.8
                  , yesod                         >= 1.2.6
-                 , yesod-auth-hashdb
                  , yesod-core                    >= 1.2.17
                  , yesod-auth                    >= 1.3
                  , yesod-static                  >= 1.2
@@ -119,7 +121,7 @@ executable         episodes
                      , episodes
                      , yesod
 
-    ghc-options:       -threaded -O2
+    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
 
 
 executable         tvrage
@@ -131,8 +133,7 @@ executable         tvrage
     build-depends:      base,
                         bytestring >= 0.10,
                         HTTP,
-                        network >= 2.6,
-                        network-uri >= 2.6,
+                        network,
                         options,
                         text,
                         xml-conduit >= 1.2,
