--- a/episodes.cabal
+++ b/episodes.cabal
@@ -34,13 +34,11 @@ library
                      Episodes.Format
                      Episodes.Time
                      Episodes.Trace
-                     Episodes.YesodPureScript
-                     Episodes.YesodPureScriptRoutes
 
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
-        ghc-options:   -Wall -O0
+        ghc-options:   -Wall -O1
     else
         ghc-options:   -Wall -O2
 
@@ -59,12 +57,13 @@ library
                         DeriveDataTypeable
 
     build-depends: aeson                         >= 0.6
-             , attoparsec
+                 , attoparsec
                  , base                          >= 4          && < 5
                  , base64-bytestring             >= 1.0
                  , bytestring                    >= 0.9
                  , conduit                       >= 1.0
                  , containers
+                 , data-default
                  , directory                     >= 1.1
                  , fast-logger                   >= 2.2
                  , filepath
@@ -75,16 +74,16 @@ library
                  , iCalendar                     >= 0.4
                  , monad-control                 >= 0.3
                  , monad-logger                  >= 0.3
-                 , network
+                 , network                       < 2.6
                  , old-locale
                  , options
                  , parsec
                  , pbkdf                         >= 1.1
-                 , persistent
-                 , persistent-postgresql         >= 1.3
+                 , persistent                    < 2
+                 , persistent-postgresql         >= 1.3 && < 2
                  , persistent-template           >= 1.3
                  , process                       >= 1.1.0.2
-                 , purescript                    >= 0.5.4.1
+                 , purescript                    >= 0.5.4.1 && < 0.5.5
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0
@@ -107,7 +106,7 @@ library
                  , yesod-auth                    >= 1.3
                  , yesod-static                  >= 1.2
                  , yesod-form                    >= 1.3
-                 , data-default
+                 , yesod-purescript
 
 
 executable         episodes
