--- a/episodes.cabal
+++ b/episodes.cabal
@@ -34,6 +34,7 @@ library
                      Episodes.Format
                      Episodes.Time
                      Episodes.Trace
+                     Episodes.Update
 
 
     if flag(dev) || flag(library-only)
@@ -83,7 +84,6 @@ library
                  , persistent-postgresql         >= 1.3 && < 2
                  , persistent-template           >= 1.3
                  , process                       >= 1.1.0.2
-                 , purescript                    >= 0.5.4.1 && < 0.5.5
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0
@@ -93,6 +93,7 @@ library
                  , text-format
                  , transformers
                  , tz
+                 , unbounded-delays              >= 0.1.0.8 && < 0.2
                  , unordered-containers          >= 0.2
                  , utf8-string
                  , uuid
@@ -106,7 +107,7 @@ library
                  , yesod-auth                    >= 1.3
                  , yesod-static                  >= 1.2
                  , yesod-form                    >= 1.3
-                 , yesod-purescript
+                 , yesod-purescript              >= 0.0.2
 
 
 executable         episodes
