--- a/episodes.cabal
+++ b/episodes.cabal
@@ -75,14 +75,14 @@ library
                  , iCalendar                     >= 0.4
                  , monad-control                 >= 0.3
                  , monad-logger                  >= 0.3
-                 , network                       < 2.6
+                 , network
                  , old-locale
                  , options
                  , parsec
                  , pbkdf                         >= 1.1
-                 , persistent                    < 2
-                 , persistent-postgresql         >= 1.3 && < 2
-                 , persistent-template           >= 1.3
+                 , persistent
+                 , persistent-postgresql
+                 , persistent-template
                  , process                       >= 1.1.0.2
                  , resourcet
                  , scientific
@@ -93,20 +93,20 @@ library
                  , text-format
                  , transformers
                  , tz
-                 , unbounded-delays              >= 0.1.0.8 && < 0.2
+                 , unbounded-delays
                  , unordered-containers          >= 0.2
                  , utf8-string
                  , uuid
                  , wai-extra                     >= 2.1
                  , wai-logger                    >= 2.2
-                 , warp                          >= 2.1
+                 , warp                          >= 3
                  , xml-conduit
                  , yaml                          >= 0.8
-                 , yesod                         >= 1.2.6
-                 , yesod-core                    >= 1.2.17
-                 , yesod-auth                    >= 1.3
-                 , yesod-static                  >= 1.2
-                 , yesod-form                    >= 1.3
+                 , yesod                         >= 1.4
+                 , yesod-core                    >= 1.4
+                 , yesod-auth                    >= 1.4
+                 , yesod-static                  >= 1.4
+                 , yesod-form                    >= 1.4
                  , yesod-purescript              >= 0.0.2
 
 
