--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,8 @@ Default: &defaults
 
 Development:
   <<: *defaults
+  update-interval: 30
+  update-count: 4
 
 Testing:
   <<: *defaults
@@ -17,3 +19,5 @@ Staging:
 Production:
   #approot: "http://www.example.com"
   <<: *defaults
+  update-interval: 36000
+  update-count: 128
