--- a/episodes.cabal
+++ b/episodes.cabal
@@ -62,6 +62,7 @@ library
                  , base                          >= 4          && < 5
                  , base64-bytestring             >= 1.0
                  , bytestring                    >= 0.9
+                 , cassava                       >= 0.4.2.0
                  , conduit                       >= 1.0
                  , containers
                  , data-default
@@ -76,18 +77,19 @@ library
                  , iCalendar                     >= 0.4
                  , monad-control                 >= 0.3
                  , monad-logger                  >= 0.3
-                 , network
+                 , network                       >= 2.6.0.2
+                 , network-uri                   >= 2.6.0.1
                  , old-locale
                  , options
                  , parsec
                  , pbkdf                         >= 1.1
-                 , persistent
+                 , persistent                    >= 2.1.1
                  , persistent-postgresql         >= 2.1
                  , persistent-template
                  , process                       >= 1.1.0.2
                  , resourcet
                  , scientific
-                 , shakespeare                   >= 2.0
+                 , shakespeare                   >= 2.0.2.1
                  , template-haskell
                  , time                          >= 1.4
                  , text                          >= 0.11
@@ -104,7 +106,7 @@ library
                  , xml-conduit
                  , yaml                          >= 0.8
                  , yesod                         >= 1.4
-                 , yesod-core                    >= 1.4.3
+                 , yesod-core                    >= 1.4.4.1
                  , yesod-auth                    >= 1.4
                  , yesod-static                  >= 1.4
                  , yesod-form                    >= 1.4
