--- a/episodes.cabal
+++ b/episodes.cabal
@@ -16,11 +16,9 @@ library
     hs-source-dirs: .
     exposed-modules: Application
                      Foundation
-                     Import
                      Model
                      Settings
                      Settings.StaticFiles
-                     Settings.Development
                      Handler.API
                      Handler.Export
                      Handler.Calendar
@@ -63,11 +61,15 @@ library
                  , base64-bytestring             >= 1.0
                  , bytestring                    >= 0.9
                  , cassava                       >= 0.4.2.0
+                 , classy-prelude
+                 , classy-prelude-conduit
+                 , classy-prelude-yesod
                  , conduit                       >= 1.0
                  , containers
                  , data-default
                  , directory                     >= 1.1
                  , fast-logger                   >= 2.2
+                 , file-embed
                  , filepath
                  , formatting                    >= 6.1.1
                  , hjsmin                        >= 0.1
@@ -98,7 +100,6 @@ library
                  , tz                            >= 0.0.0.9
                  , unbounded-delays
                  , unordered-containers          >= 0.2
-                 , utf8-string
                  , uuid
                  , wai-extra                     >= 2.1
                  , wai-logger                    >= 2.2
@@ -110,7 +111,7 @@ library
                  , yesod-auth                    >= 1.4.1.3
                  , yesod-static                  >= 1.4.0.4
                  , yesod-form                    >= 1.4.3.1
-                 , yesod-purescript              >= 0.0.4.2
+                 , yesod-purescript              >= 0.0.4.3
 
 
 executable         episodes
