--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,6 +3,8 @@ Default: &defaults
   port: 3000
   approot: "http://localhost:3000"
   copyright: Maciej Pietrzak
+  update-interval: 36000
+  update-count: 2
   #analytics: UA-YOURCODE
 
 Development:
