--- a/episodes.cabal
+++ b/episodes.cabal
@@ -11,6 +11,9 @@ Flag library-only
     Description:   Build for use with "yesod devel"
     Default:       False
 
+Flag build-tvrage-cli
+    Default:       False
+
 library
     default-language: Haskell2010
     hs-source-dirs: .
@@ -59,8 +62,9 @@ library
                  , attoparsec
                  , base                          >= 4          && < 5
                  , base64-bytestring             >= 1.0
+                 , blaze-html                    >= 0.8
                  , bytestring                    >= 0.9
-                 , cassava                       >= 0.4.2.0
+                 , cassava                       >= 0.4.2
                  , classy-prelude
                  , classy-prelude-conduit
                  , classy-prelude-yesod
@@ -89,14 +93,16 @@ library
                  , persistent-postgresql         >= 2.1.2.2
                  , persistent-template
                  , process                       >= 1.1.0.2
+                 , purescript                    >= 0.6.8
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0.2.2
                  , template-haskell
                  , time                          >= 1.4
+                 , time-locale-compat
                  , text                          >= 0.11
                  , text-format
-                 , transformers
+                 , transformers                  >= 0.4
                  , tz                            >= 0.0.0.9
                  , unbounded-delays
                  , unordered-containers          >= 0.2
@@ -111,7 +117,7 @@ library
                  , yesod-auth                    >= 1.4.1.3
                  , yesod-static                  >= 1.4.0.4
                  , yesod-form                    >= 1.4.3.1
-                 , yesod-purescript              >= 0.0.4.4
+                 , yesod-purescript              >= 0.0.5
 
 
 executable         episodes
@@ -130,7 +136,9 @@ executable         episodes
 
 executable         tvrage
     default-language: Haskell2010
-    if flag(library-only)
+    if flag(build-tvrage-cli)
+        Buildable: True
+    else
         Buildable: False
     main-is:            main.hs
     hs-source-dirs:     ., app-tvrage
