--- a/episodes.cabal
+++ b/episodes.cabal
@@ -60,16 +60,16 @@ library
 
     build-depends: aeson                         >= 0.6
                  , attoparsec
-                 , base                          >= 4          && < 5
+                 , base                          >= 4 && < 5
                  , base64-bytestring             >= 1.0
                  , blaze-html                    >= 0.8
                  , bytestring                    >= 0.9
                  , cassava                       >= 0.4.2
                  , classy-prelude
-                 , classy-prelude-conduit
+                 -- , classy-prelude-conduit
                  , classy-prelude-yesod
                  , conduit                       >= 1.0
-                 , containers
+                 , containers                    >= 0.5
                  , data-default
                  , directory                     >= 1.1
                  , fast-logger                   >= 2.2
@@ -93,12 +93,12 @@ library
                  , persistent-postgresql         >= 2.1.2.2
                  , persistent-template
                  , process                       >= 1.1.0.2
-                 , purescript                    >= 0.6.8
+                 , purescript                    >= 0.6.9.3
                  , resourcet
                  , scientific
                  , shakespeare                   >= 2.0.2.2
                  , template-haskell
-                 , time                          >= 1.4
+                 , time                          >= 1.4 && <1.5
                  , time-locale-compat
                  , text                          >= 0.11
                  , text-format
@@ -112,12 +112,16 @@ library
                  , warp                          >= 3
                  , xml-conduit
                  , yaml                          >= 0.8
-                 , yesod                         >= 1.4
-                 , yesod-core                    >= 1.4.7.2
-                 , yesod-auth                    >= 1.4.1.3
+                 , yesod                         >= 1.4.1.4
+                 , yesod-core                    >= 1.4.9
+                 , yesod-auth                    >= 1.4.4
                  , yesod-static                  >= 1.4.0.4
-                 , yesod-form                    >= 1.4.3.1
+                 , yesod-form                    >= 1.4.4.1
                  , yesod-purescript              >= 0.0.5
+
+
+                 -- bah
+                 , primitive >= 0.5 && <0.6
 
 
 executable         episodes
