--- a/episodes.cabal
+++ b/episodes.cabal
@@ -31,6 +31,7 @@ library
                      TVRage
                      Episodes.Auth
                      Episodes.DB
+                     Episodes.Cache
                      Episodes.Common
                      Episodes.Format
                      Episodes.Time
@@ -60,6 +61,7 @@ library
 
     build-depends: aeson                         >= 0.6
                  , attoparsec
+                 , async                         >= 2
                  , base                          >= 4 && < 5
                  , base64-bytestring             >= 1.0
                  , blaze-html                    >= 0.8
