--- a/bower.json
+++ b/bower.json
@@ -6,16 +6,10 @@
   ],
   "license": "MIT",
   "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
   "dependencies": {
+    "purescript-console": "0.1.0",
+    "purescript-functions": "0.1.0",
     "purescript-globals": "0.2.0",
-    "purescript-jquery": "0.5.0",
-    "purescript-strings": "0.5.4"
+    "purescript-jquery": "0.5.0"
   }
 }
