--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,21 @@
-dist*
-static/tmp/
-static/combined/
-config/client_session_key.aes
 *.hi
 *.o
 *.sqlite3
-.hsenv*
-cabal-dev/
-yesod-devel/
-.cabal-sandbox
-cabal.sandbox.config
-.DS_Store
 *.swp
+.cabal-sandbox
+.DS_Store
+.hsenv*
+.psci_modules
+.yesod-purescript-build
+bower_components
+cabal-dev/
+cabal.sandbox.config
+config/client_session_key.aes
+dist*
 episodes.sublime-project
 episodes.sublime-workspace
+static/combined/
 static/faygen-*.js
+static/tmp/
 tools/closure-compiler.jar
-bower_components
-.psci_modules
+yesod-devel/
