--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "purescript-bigints": "0.1.0",
     "purescript-console": "0.1.0",
     "purescript-functions": "0.1.0",
     "purescript-globals": "0.2.0",
