--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@ dist*
 episodes.sublime-project
 episodes.sublime-workspace
 node_modules
-output
-psc-output
+purescript-output
 static/combined/
 static/faygen-*.js
 static/tmp/
