--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "purescript-bigints": "0.1.0",
-    "purescript-console": "0.1.0",
+    "purescript-affjax": ">=0.13.0",
+    "purescript-console": ">=0.1.1",
+    "purescript-exceptions": ">=0.3.4",
     "purescript-functions": "0.1.0",
-    "purescript-globals": "0.2.0",
-    "purescript-jquery": "0.5.0"
+    "purescript-globals": "0.2.2",
+    "purescript-jquery": "0.6.0",
+    "purescript-maybe": ">=0.3.5",
+    "purescript-refs": "0.2.0",
+    "purescript-format": ">=0.1"
   }
 }
