--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,25 @@
 {
   "name": "episodes",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "authors": [
     "Maciej Pietrzak <maciej@hell.cx>"
   ],
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "purescript-affjax": ">=0.13.0",
-    "purescript-console": ">=0.1.1",
-    "purescript-exceptions": ">=0.3.4",
-    "purescript-functions": ">=0.1.0",
-    "purescript-globals": ">=0.2.2",
-    "purescript-jquery": ">=0.6.1",
-    "purescript-maybe": ">=0.3.5",
-    "purescript-refs": ">=0.2.0"
+    "purescript-aff": "^3.1.0",
+    "purescript-affjax": "^4.0.0",
+    "purescript-argonaut-codecs": "^3.0.1",
+    "purescript-argonaut-core": "^3.1.0",
+    "purescript-console": "^3.0.0",
+    "purescript-datetime": "^3.0.0",
+    "purescript-exceptions": "^3.1.0",
+    "purescript-functions": "^3.0.0",
+    "purescript-globals": "^3.0.0",
+    "purescript-jquery": "^4.2.1",
+    "purescript-maybe": "^3.0.0",
+    "purescript-now": "^3.0.0",
+    "purescript-refs": "^3.0.0",
+    "purescript-strings": "^3.3.0"
   }
 }
